quick ticket state change

--- a/application/views/scripts/tickets/list.phtml
+++ b/application/views/scripts/tickets/list.phtml
@@ -15,7 +15,7 @@
                         <th class="tiny">
                             #
                         </th>
-                        <th class="tiny">
+                        <th class="medium">
                             State
                         </th>
                         <th class="main">
