--- a/application/views/scripts/tickets/view.phtml
+++ b/application/views/scripts/tickets/view.phtml
@@ -35,7 +35,7 @@
                             <ul class="dropdown-menu">
                                 <?php
                                     foreach($this->states as $state) {
-                                        ?><li><a href="<?=$this->baseUrl();?>/tickets/id/<?=$this->item->id?>/setState/<?=$state->id?>"><?=$state?></a></li><?php
+                                        ?><li><a href="<?=$this->baseUrl();?>/tickets/setState/id/<?=$this->item->id?>/stateId/<?=$state->id?>"><?=$state?></a></li><?php
                                     }
                                 ?>
                             </ul>
