ticket number in detail view

--- a/application/views/scripts/tickets/view.phtml
+++ b/application/views/scripts/tickets/view.phtml
@@ -7,7 +7,7 @@
                 }
             ?>
 
-            <h2><?=$this->item?></h2>
+            <h2>[#<?=$this->item->id?>] <?=$this->item?></h2>
         </div>
     </div>
 
