--- a/application/views/scripts/tickets/view.phtml
+++ b/application/views/scripts/tickets/view.phtml
@@ -14,7 +14,7 @@
     <div class="row-fluid">
         <div class="span9">
             <div class="well well-small">
-                <?=$this->item->description?>
+                <?=$this->item->getDescriptionParsed()?>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
                 <div class="row-fluid">
                     <div class="span9">
                         <div class="well well-small">
-                            <?=$update->description?>
+                            <?=$update->getDescriptionParsed()?>
                         </div>
                     </div>
 
