higlight state changes

--- a/application/views/scripts/tickets/view.phtml
+++ b/application/views/scripts/tickets/view.phtml
@@ -102,9 +102,15 @@
                                     <dd>Cem Derin</dd>
                                 </dl>
                             </li>
+                            <li>
+                                <dl>
+                                    <dt>Update:</dt>
+                                    <dd><?=date('d.m.Y, H:i:s', $update->getUpdatedAsTimestamp())?></dd>
+                                </dl>
+                            </li>
 
                             <?php if($update->getState()->id){ ?>
-                            <li>
+                            <li class="highlight">
                                 <dl>
                                     <dt>State:</dt>
                                     <dd><?=$update->getState()?></dd>
@@ -113,20 +119,13 @@
                             <?php } ?>
 
                             <?php if($update->getAttachedTo()->id) { ?>
-                            <li>
+                            <li class="highlight">
                                 <dl>
                                     <dt>Attached to:</dt>
                                     <dd><?=$update->getAttachedTo()?></dd>
                                 </dl>
                             </li>
                             <?php } ?>
-
-                            <li>
-                                <dl>
-                                    <dt>Update:</dt>
-                                    <dd><?=date('d.m.Y, H:i:s', $update->getUpdatedAsTimestamp())?></dd>
-                                </dl>
-                            </li>
                         </ul>
                     </div>
                 </div>
