implement ticket types

--- a/application/views/layouts/scripts/layout.phtml
+++ b/application/views/layouts/scripts/layout.phtml
@@ -32,6 +32,7 @@
                     <li class="<?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'projects') { echo 'active'; }?>"><a href="<?=$this->baseUrl();?>/projects">Projects</a></li>
                     <li class="<?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'users') { echo 'active'; }?>"><a href="<?=$this->baseUrl();?>/users">Users</a></li>
                     <li class="<?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'states') { echo 'active'; }?>"><a href="<?=$this->baseUrl();?>/states">States</a></li>
+                    <li class="<?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'types') { echo 'active'; }?>"><a href="<?=$this->baseUrl();?>/types">Types</a></li>
                     <li class="<?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'tickets') { echo 'active'; }?>"><a href="<?=$this->baseUrl();?>/tickets">Tickets</a></li>
                 </ul>
             </div>
