--- a/application/views/layouts/scripts/layout.phtml
+++ b/application/views/layouts/scripts/layout.phtml
@@ -2,7 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>nomobu</title>
+
+    <?php
+        $this->headTitle('nomobu');
+        $this->headTitle()->setSeparator(' – ');
+        echo $this->headTitle();
+    ?>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
