--- a/application/views/layouts/scripts/layout.phtml
+++ b/application/views/layouts/scripts/layout.phtml
@@ -42,6 +42,12 @@
                 </ul>
             </div>
 
+            <div class="nav-collapse collapse pull-right">
+                <ul class="nav">
+                    <li><a href="<?=$this->baseUrl();?>/auth/signout"><?=Zend_Registry::get('user')?></a></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </div>
