--- a/application/views/scripts/tickets/view.phtml
+++ b/application/views/scripts/tickets/view.phtml
@@ -119,7 +119,7 @@
                             <li>
                                 <dl>
                                     <dt>Autor:</dt>
-                                    <dd>Cem Derin</dd>
+                                    <dd><?=$update->getCreatedBy()?></dd>
                                 </dl>
                             </li>
                             <li>
